@@ -6,6 +6,7 @@ Date: ???
     - Support for "smoke-with-trigger"
     - Simplify quality bonus application
     - Support tiles
+    - Allow non-quality recipes in quality modules buildings and "dumping" quality items into fluid results
   Bug fixes:
     - Fixes for module definitions without slots
 ---------------------------------------------------------------------------------------------------
